--- a/package.json
+++ b/package.json
@@ -6,15 +6,30 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "fetch": "^1.1.0",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
+    "morgan": "^1.10.0",
+    "node-fetch": "^2.6.0",
+    "querystring": "^0.2.0",
+    "randomstring": "^1.1.5",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-native-elements": "^2.0.4",
+    "react-scripts": "3.4.1",
+    "request": "^2.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "npx nodemon  server/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
