socket + encryption hash salted

--- a/package.json
+++ b/package.json
@@ -8,21 +8,28 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "fetch": "^1.1.0",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "https": "^1.0.0",
+    "js-cookie": "^2.2.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.0",
     "querystring": "^0.2.0",
     "randomstring": "^1.1.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-native-elements": "^2.0.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "universal-cookie": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
