--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "https": "^1.0.0",
+    "informa-db.js": "^1.0.7-beta.0",
     "js-cookie": "^2.2.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.0",
@@ -34,7 +35,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "node test.js",
     "eject": "react-scripts eject",
     "server": "npx nodemon  server/index.js"
   },
