--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "https": "^1.0.0",
     "informa-db.js": "^1.0.7-beta.0",
     "js-cookie": "^2.2.1",
+    "moment": "^2.27.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.0",
     "querystring": "^0.2.0",
