--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
-    "test": "node test.js",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "npx nodemon  server/index.js"
   },
@@ -54,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
