fixing login issus

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^16.13.1",
     "react-native-elements": "^2.0.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "request": "^2.88.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
